<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.appzspot.imbusy.MainActivity">

    <TextView
        android:id="@+id/main_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        style="@style/ImbsyTextH"
        android:text="@string/i_m_busy"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_when_i_m_walking_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when_i_m"
                style="@style/ImbsyTextP"
                android:layout_marginRight="5dp"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/walking"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walking"
                style="@style/ImbsyTextP"
                android:layout_marginRight="20dp"
                />
            
            <ImageButton
                android:id="@+id/main_when_i_m_walking_toggle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/cross"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                />
            
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <LinearLayout
            android:id="@+id/main_when_i_m_runjog_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when_i_m"
                style="@style/ImbsyTextP"
                android:layout_marginRight="5dp"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/running"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/running_jogging"
                style="@style/ImbsyTextP"
                android:layout_marginRight="20dp"
                />

            <ImageButton
                android:id="@+id/main_when_i_m_runjog_toggle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/cross"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <LinearLayout
            android:id="@+id/main_when_i_m_driving_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when_i_m"
                style="@style/ImbsyTextP"
                android:layout_marginRight="10dp"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/car"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driving"
                style="@style/ImbsyTextP"
                android:layout_marginRight="20dp"
                />

            <ImageButton
                android:id="@+id/main_when_i_m_driving_toggle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/cross"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                />

        </LinearLayout>

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0.5dp"-->
            <!--android:background="@color/colorAccent"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--/>-->

        <!--<LinearLayout-->
            <!--android:id="@+id/main_when_i_m_at_full"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center_vertical"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/when_i_m_at"-->
                <!--style="@style/ImbsyTextP"-->
                <!--android:layout_marginRight="5dp"/>-->


            <!--<ImageButton-->
                <!--android:id="@+id/main_when_i_m_at_loc"-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_height="20dp"-->
                <!--android:scaleType="fitCenter"-->
                <!--android:background="@android:color/transparent"-->
                <!--android:src="@drawable/location"-->
                <!--android:layout_marginRight="20dp"/>-->


            <!--<ImageButton-->
                <!--android:id="@+id/main_when_i_m_at_toggle"-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_height="20dp"-->
                <!--android:src="@drawable/cross"-->
                <!--android:scaleType="fitCenter"-->
                <!--android:background="@android:color/transparent"-->
                <!--/>-->

        <!--</LinearLayout>-->

    </LinearLayout>

</RelativeLayout>
